--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@ ul{
     color: green;
     font-size: 18px;
 }   
+button{
+    background-color: yellow;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
